collapsing categories and fix search

--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -276,6 +276,9 @@
   .mt-8 {
     margin-top: calc(var(--spacing) * 8);
   }
+  .mr-2 {
+    margin-right: calc(var(--spacing) * 2);
+  }
   .mb-2 {
     margin-bottom: calc(var(--spacing) * 2);
   }
